@@ -7,10 +7,18 @@
 	<version>1.0</version>
 	<name>Moom Account Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.3.3.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
+
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<spring.security.version>3.2.5.RELEASE</spring.security.version>
-		<jetty-version>9.3.0.M1</jetty-version>
 	</properties>
 	<dependencies>
 
@@ -222,13 +230,11 @@
 			<artifactId>querydsl-elasticsearch</artifactId>
 			<version>4.0.8</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 			<version>4.1.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
@@ -239,6 +245,29 @@
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-elasticsearch</artifactId> 
+			</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 
 	</dependencies>
@@ -296,33 +325,10 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.3.0.M1</version>
-				<configuration>
-					<jvmArgs>-Xmx2048m -Xms1536m
-						-XX:PermSize=128m -XX:MaxPermSize=512m</jvmArgs>
-					<reload>manual</reload>
-					<systemProperties>
-						<systemProperty>
-							<name>lib</name>
-							<value>${basedir}/target/cooc-account/WEB-INF/lib</value>
-						</systemProperty>
-					</systemProperties>
-					<scanIntervalSeconds>3</scanIntervalSeconds>
-					<connectors>
-						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							<port>8080</port>
-							<maxIdleTime>60000</maxIdleTime>
-						</connector>
-					</connectors>
-					<webAppConfig>
-						<contextPath>/</contextPath>
-						<descriptor>${basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>
-					</webAppConfig>
-					<webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory>
-					<classesDirectory>${basedir}/target/classes</classesDirectory>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- <executions> <execution> <goals> <goal>repackage</goal> </goals> 
+					</execution> </executions> -->
 			</plugin>
 
 		</plugins>
